(core) Fix the 1px gap in Firefox at the bottom of the cell editor.
Test Plan: Tested manually on Firefox and Chrome.

Reviewers: jarek

Reviewed By: jarek

Differential Revision: https://phab.getgrist.com/D4866

--- a/app/client/widgets/TextEditor.css
+++ b/app/client/widgets/TextEditor.css
@@ -79,6 +79,7 @@
   display: block;
   outline: none;
   padding: 0px;
+  margin: 0px;
   border: none;
   resize: none;
   z-index: 10;
